--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mpan"
-version = "1.0.1"
+version = "1.0.2"
 description = "A parsing library for the UK's MPAN energy standard"
 authors = ["Limejump Developers <opensource@limejump.com>"]
 license = "MIT"
@@ -19,15 +19,15 @@ black = "^20.8b1"
 isort = "^5.7.0"
 flake8 = "^3.8.4"
 ipython = "^7.20.0"
+pre-commit = "^2.10.0"
 pytest = "^6.2.2"
 pytest-cov = "^2.11.0"
-pre-commit = "^2.10.0"
 
 
 [tool.coverage.run]
 branch = true
 source = ["."]
-omit = ["tests.py", ".venv/*"]
+omit = ["tests/*", ".venv/*"]
 
 
 [tool.coverage.report]
