--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ documentation = "https://github.com/limejump/mpan"
 
 [tool.poetry.dependencies]
 
-python = "^3.8"
+python = ">=3.8,<4.0"
 
 Faker = { version = "^10.0.0", optional = true }
 mimesis = { version = "^5.1.0", optional = true }
@@ -29,6 +29,8 @@ black = "^20.8b1"
 isort = "^5.7.0"
 flake8 = "^3.8.4"
 ipython = "^7.20.0"
+mkdocs = "^1.2.3"
+mkdocs-techdocs-core = "^0.2.2"
 pre-commit = "^2.10.0"
 pytest = "^6.2.5"
 pytest-cov = "^2.11.0"
@@ -73,7 +75,7 @@ sections=[
 line-length = 79
 target-version = ["py38"]
 include = '\.pyi?$'
-exclude = '/(\.eggs|\.git|_build|build|dist)/'
+exclude = '/(\.eggs|\.git|_build|build|dist|\.venv)/'
 
 
 [build-system]
