--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mpan"
-version = "1.1.0"
+version = "2.0.0"
 description = "A parsing library for the UK's MPAN energy standard"
 authors = ["Limejump Developers <opensource@limejump.com>"]
 license = "MIT"
@@ -28,6 +28,7 @@ mimesis = ["mimesis"]
 black = "^20.8b1"
 isort = "^5.7.0"
 flake8 = "^3.8.4"
+freezegun = "^1.2.1"
 ipython = "^7.20.0"
 mkdocs = "^1.2.3"
 mkdocs-techdocs-core = "^0.2.2"
